--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,4 +1,5 @@
 {
+    "devCommand": "uvicorn main:app --host 0.0.0.0 --port 3000",
     "builds": [
         {
             "src": "server.py",
@@ -16,5 +17,10 @@
             "src": "/(.*)",
             "dest": "server.py"
         }
-    ]
+    ],
+    "git": {
+        "deploymentEnabled": {
+            "main": false
+        }
+    }
 }
