--- a/server/vercel.json
+++ b/server/vercel.json
@@ -17,5 +17,10 @@
             "src": "/(.*)",
             "dest": "server.py"
         }
-    ]
+    ],
+    "git": {
+        "deploymentEnabled": {
+            "main": false
+        }
+    }
 }
