--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 # old
-# MYSQL_ROOT_PASSWORD=ynovpwd
-# MYSQL_DATABASE=ynov_ci
-# MYSQL_USER=root
+MYSQL_ROOT_PASSWORD=ynovpwd
+MYSQL_DATABASE=ynov_ci
+MYSQL_USER=root
 # new
-MYSQL_DATABASE=51bvb_formulaire
-MYSQL_USER=51BVB
-MYSQL_PASSWORD=BVB51YNOV
-MYSQL_HOST=mysql-51bvb.alwaysdata.net
+# MYSQL_DATABASE=51bvb_formulaire
+# MYSQL_USER=51BVB
+# MYSQL_PASSWORD=BVB51YNOV
+# MYSQL_HOST=mysql-51bvb.alwaysdata.net
