--- a/DockerfilePython
+++ b/DockerfilePython
@@ -1,7 +1,7 @@
 FROM python:3.9
 WORKDIR /server 
 COPY ./server/server.py /server/server.py
-RUN pip install mysql-connector-python \fastapi uvicorn
+RUN pip install mysql-connector-python \fastapi uvicorn python-multipart
 EXPOSE 8000
 CMD uvicorn server:app \
  --proxy-headers --host 0.0.0.0 --port 8000
