admin login delete test 1

--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ MYSQL_USER=root
 # MYSQL_USER=51BVB
 # MYSQL_PASSWORD=BVB51YNOV
 # MYSQL_HOST=mysql-51bvb.alwaysdata.net
+JWT_SECRET_KEY=651006DX5HC0F51
